--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -80,9 +80,6 @@ header {
   width: 16ch;
   height: 2rem;
   border-radius: 1rem;
-}
-
-.StartMenuBtn:hover {
   cursor: pointer;
 }
 
@@ -130,9 +127,6 @@ header {
   width: 16ch;
   height: 2rem;
   border-radius: 1rem;
-}
-
-.playBtn:hover {
   cursor: pointer;
 }
 
@@ -144,22 +138,41 @@ header {
 
 .shipPlacementAlert {
   color: var(--error);
+
+  max-height: 0;
+  opacity: 0;
+  overflow: hidden;
+  transition:
+    max-height 0.5s ease,
+    opacity 0.5s ease;
+}
+
+.shipPlacementAlert.show {
+  max-height: 1rem;
+  opacity: 1;
 }
 
 .shipSelectionContainer {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   gap: 1rem;
 }
 
 .shipBtn,
 .rotateBtn,
 .resetBtn {
-  cursor: pointer;
   width: 16ch;
   height: 2rem;
   border-radius: 1rem;
+  place-self: center;
+}
+
+.shipBtn:not(:disabled):hover,
+.rotateBtn:not(:disabled):hover,
+.resetBtn:not(:disabled):hover {
+  cursor: pointer;
 }
 
 .validPlacement {
@@ -183,10 +196,13 @@ header {
 }
 
 .continueBtn {
-  cursor: pointer;
   width: 16ch;
   height: 2rem;
   border-radius: 1rem;
+}
+
+.continueBtn:not(:disabled):hover {
+  cursor: pointer;
 }
 
 /* Game result styling */
@@ -195,6 +211,20 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  transform: translateY(-100%);
+  opacity: 0;
+  max-height: 0;
+  transition:
+    opacity 0.5s ease-out,
+    transform 0.5s ease-out,
+    max-height 0.5s ease-out;
+}
+
+.resultContainer.show {
+  transform: translateY(0);
+  opacity: 1;
+  max-height: 90px;
 }
 
 .playAgainBtn {
